@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-06-14T01:18:06Z",
-  "count_outdated" : 105,
-  "uniques_outdated" : 69,
-  "count" : 106,
-  "uniques" : 70,
+  "timestamp" : "2022-06-15T01:11:29Z",
+  "count_outdated" : 106,
+  "uniques_outdated" : 70,
+  "count" : 107,
+  "uniques" : 71,
   "clones" : [
     {
-      "timestamp": "2022-05-31T00:00:00Z",
+      "timestamp": "2022-06-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
